Fix spacing at the bottom of the cs page

--- a/src/styles/pages/use-cases/_customer-success.scss
+++ b/src/styles/pages/use-cases/_customer-success.scss
@@ -131,7 +131,7 @@
 
     &.get-started {
       background-color: var(--gray-blue-700);
-      padding: 6rem;
+      padding: 6rem 6rem 0 6rem;
 
       @include breakpoint-md {
         display: none;
